k8s/mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db
          image: mongo:4.2.22-rc0-bionic
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
spec:
  selector:
    app: mongo-db
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongo-db
