k8s/nats-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-broker
spec:
  selector:
    matchLabels:
      app: nats-broker
  template:
    metadata:
      labels:
        app: nats-broker
    spec:
      containers:
        - name: nats-broker
          image: nats:2.8.4-alpine3.15
          # resources:
          #   limits:
          #     cpu: 300m
          #     memory: 256M
          #   requests:
          #     cpu: 200m
          #     memory: 128M
          args: ['--jetstream', '-m', '8222']
---
apiVersion: v1
kind: Service
metadata:
  name: nats-broker
spec:
  selector:
    app: nats-broker
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
