k8s/redis-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis-cache
          image: redis:7.0.4-alpine3.16
          # resources:
          #   limits:
          #     cpu: 300m
          #     memory: 256M
          #   requests:
          #     cpu: 200m
          #     memory: 128M
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
spec:
  selector:
    app: redis-cache
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis-cache
