k8s/traefik-ingress.yaml
#http://traefik.localhost/dashboard/
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-api-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.localhost`)
      services:
        - kind: Service
          name: example-go-api
          port: 3333
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-frontend-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`)
      services:
        - kind: Service
          name: example-vite-react
          port: 5173
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: foo
#   namespace: bar
# spec:
#   entryPoints:                      # [1]
#     - foo
#   routes:                           # [2]
#   - kind: Rule
#     match: Host(`test.example.com`) # [3]
#     priority: 10                    # [4]
#     middlewares:                    # [5]
#     - name: middleware1             # [6]
#       namespace: default            # [7]
#     services:                       # [8]
#     - kind: Service
#       name: foo
#       namespace: default
#       passHostHeader: true
#       port: 80
#       responseForwarding:
#         flushInterval: 1ms
#       scheme: https
#       sticky:
#         cookie:
#           httpOnly: true
#           name: cookie
#           secure: true
#           sameSite: none
#       strategy: RoundRobin
#       weight: 10
#   tls:                              # [9]
#     secretName: supersecret         # [10]
#     options:                        # [11]
#       name: opt                     # [12]
#       namespace: default            # [13]
#     certResolver: foo               # [14]
#     domains:                        # [15]
#     - main: example.net             # [16]
#       sans:                         # [17]
#       - a.example.net
#       - b.example.net
